--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "vite",
     "preview": "vite preview",
     "build": "vite build",
+    "build:staging": "vite build --mode staging",
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
   "dependencies": {
     "element-plus": "^2.3.1",
+    "lodash-es": "^4.17.21",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
@@ -29,6 +31,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
+    "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.60.0",
     "typescript": "~4.8.4",
     "unplugin-auto-import": "^0.15.2",
