--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash-es": "^4.17.21",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.32",
+    "vanilla-tilt": "^1.8.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
