--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "animate.css": "^4.1.1",
     "element-plus": "^2.3.1",
     "lodash-es": "^4.17.21",
