--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@element-plus/icons-vue": "^2.1.0",
     "animate.css": "^4.1.1",
+    "codemirror": "^6.0.1",
     "element-plus": "^2.3.1",
     "lodash-es": "^4.17.21",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.32",
     "vanilla-tilt": "^1.8.0",
     "vue": "^3.2.47",
+    "vue-codemirror": "^6.1.1",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
