--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "element-plus": "^2.3.1",
     "lodash-es": "^4.17.21",
     "normalize.css": "^8.0.1",
-    "pinia": "^2.0.32",
+    "pinia": "^2.0.35",
     "vanilla-tilt": "^1.8.0",
     "vue": "^3.2.47",
     "vue-codemirror": "^6.1.1",
@@ -27,22 +27,23 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
+    "@tsconfig/node18": "^2.0.0",
     "@types/node": "^18.14.2",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@vitejs/plugin-vue": "^4.2.1",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.34.0",
-    "eslint-plugin-vue": "^9.9.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/tsconfig": "^0.3.2",
+    "eslint": "^8.39.0",
+    "eslint-plugin-vue": "^9.11.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.8",
     "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.60.0",
-    "typescript": "~4.8.4",
+    "typescript": "~5.0.4",
     "unplugin-auto-import": "^0.15.2",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.4",
-    "vue-tsc": "^1.2.0"
+    "vue-tsc": "^1.6.4"
   }
 }
