--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.4",
     "vue-tsc": "^1.6.4"
+  },
+  "volta": {
+    "node": "18.16.1",
+    "npm": "9.5.1"
   }
 }
