--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "unplugin-auto-import": "^0.15.2",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.4",
+    "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^1.6.4"
   },
   "volta": {
