conf: 修改部分配置

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,6 +8,7 @@
   ],
   "compilerOptions": {
     "composite": true,
+    "module": "ESNext",
     "moduleResolution": "Node",
     "types": [
       "node"
